# autoparking

./: CMakeLists.txt  DatabaseManager.hpp  README.md  autoparking  parking
Exceptions/: DuplicateVehicleError.hpp  InputCancelledError.hpp  InvalidLicensePlateError.hpp  InvalidSpotNumberError.hpp  InvalidTimeFormatError.hpp  ValidationError.hpp
Header/: Car.hpp  DatabaseManager.hpp  ExportManager.hpp  FilterCriteria.hpp  Get.hpp  InputValidator.hpp  LoginWindow.hpp  MainWindow.hpp  ParkingLot.hpp  ParkingSpot.hpp  Queue.hpp  TerminalDisplay.hpp  Truck.hpp  Vehicle.hpp
Source/: Car.cpp  ExportManager.cpp  LoginWindow.cpp  MainWindow.cpp  ParkingLot.cpp  ParkingSpot.cpp  Truck.cpp  main.cpp
include/: Car.h  Parking.h
src/: Car.cpp  Parking.cpp  main.cpp
